@startuml
'https://plantuml.com/class-diagram


class Etablissement {
-Nom : string
-Slug : string
-Description : string
-Numéro Téléphone : string
-Adresse Postale : string
-Adresse Mail : string
-Image : string
-Actif : bool
-Accueil : bool
-CreateAd : datetime
-UpdatedAT : datetime

}

class Ville {
-Nom : string
-Code Postale : string
-Nom Departement : string
-Numéro Departement : string
-Nom Région : string

}

class Categorie {
-Nom : string
-CreateAd : datetime
}

class User {
-Prenom : string
-Nom : string
-pseudo : string
-mail : string
-Mot de passe : string
-CreatedAt : datetime
-UpdatedUp : datetime
-Role : array
-Actif : bool
}
User "0..*"--"0..*" Etablissement
Ville "1..1"--"0..*" Etablissement
Categorie "1..*"--"0..*" Etablissement

@enduml